php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #17762 dbase_get_record_with_names not working
Submitted: 2002-06-14 09:35 UTC Modified: 2002-06-16 22:28 UTC
Votes:3
Avg. Score:5.0 ± 0.0
Reproduced:2 of 2 (100.0%)
Same Version:2 (100.0%)
Same OS:2 (100.0%)
From: nadol at conecta dot com dot pl Assigned:
Status: Closed Package: dBase related
PHP Version: 4.2.1 OS: Linux RedHat
Private report: No CVE-ID: None
 [2002-06-14 09:35 UTC] nadol at conecta dot com dot pl
dbase_get_record_with_names not working, when i'm using this function browser (IE) gives me message "cannot display page", dbase_get_record working fine

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2002-06-14 15:15 UTC] sniper@php.net
Not enough information was provided for us to be able
to handle this bug. Please re-read the instructions at
http://bugs.php.net/how-to-report.php

If you can provide more information, feel free to add it
to this bug and change the status back to "Open".

Thank you for your interest in PHP.



 [2002-06-15 13:25 UTC] nadol at conecta dot com dot pl
Simple example:
<?
$dbname="example.dbf";
    $db = dbase_open($dbname , 0);
//example.dbf fields: [ID][NAME]...
    $numRecords = dbase_numrecords($db);
    $numFields = dbase_numfields($db);
    for($index = 1; $index <= $numRecords; $index++)
    {
        $record = dbase_get_record_with_names($db, $index);
	print $record['NAME'];
    }
?>
Executing this script cause massage "cannot display page" in browser (IE). Comment out linie with function dbase_get_record_with_names and executing this script causes no error.
This work fine:
<?
$dbname="example.dbf";
    $db = dbase_open($dbname , 0);
//example.dbf fields: [ID][NAME]...
    $numRecords = dbase_numrecords($db);
    $numFields = dbase_numfields($db);
    for($indexr = 1; $indexr <= $numRecords; $indexr++)
    {
       for($indexf = 1; $indexf <= $numFields; $indexf++)
       {
        $record = dbase_get_record($db, $indexr);
	    print $record[$indexf];
	   }
    }
?>
 [2002-06-15 19:46 UTC] sniper@php.net
It's kinda hard to test this since I don't have that
example.dbf file. Could you provide that too?
(put it somewhere where it can be downloaded and add the url here)




 [2002-06-16 04:41 UTC] nadol at conecta dot com dot pl
OK. Real dbase file url: http://local.conecta.com.pl/~nadol/ARTYKULY_3.DBF
 [2002-06-16 22:27 UTC] sniper@php.net
This bug has been fixed in CVS. You can grab a snapshot of the
CVS version at http://snaps.php.net/. In case this was a documentation 
problem, the fix will show up soon at http://www.php.net/manual/.
In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites.
Thank you for the report, and for helping us make PHP better.


 [2002-06-16 22:28 UTC] sniper@php.net
closed it was supposed to be..

 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 29 12:00:02 2026 UTC