- Made dbase_get_record() and dbase_get_record_with_names use same backend   function as they both do same thing, just the output is different.

Fixes also bug #17762 as side effect.


git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@85882 c90b9560-bf6c-de11-be94-00142212c4b1